// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`json-schema-typings-plugin should generate typings for JSON Schemas (formatted) 1`] = `
Object {
  "./test-invalid-additional.schema.json.d.ts": "// This file was generated by a tool. Modifying it will produce unexpected behavior

export interface TestInvalidAdditional {
  [k: string]: unknown;
}
",
  "./test-invalid-format.schema.json.d.ts": "// This file was generated by a tool. Modifying it will produce unexpected behavior

export interface TestInvalidFormat {
  [k: string]: unknown;
}
",
  "./test-schema-draft-04.schema.json.d.ts": "// This file was generated by a tool. Modifying it will produce unexpected behavior

export interface TestSchemaFile {
  exampleString: string;
  exampleLink?: string;
  exampleArray: string[];
  /**
   * Description for exampleOneOf - this is a very long description to show in an error message
   */
  exampleOneOf?: Type1 | Type2;
  exampleUniqueObjectArray?: {
    field2?: string;
    field3?: string;
  }[];
}
/**
 * Description for type1
 */
export interface Type1 {
  /**
   * Description for field1
   */
  field1: string;
}
/**
 * Description for type2
 */
export interface Type2 {
  /**
   * Description for field2
   */
  field2: string;
  /**
   * Description for field3
   */
  field3: string;
}
",
  "./test-schema-draft-07.schema.json.d.ts": "// This file was generated by a tool. Modifying it will produce unexpected behavior

export interface TestSchemaFile {
  exampleString: string;
  exampleLink?: string;
  exampleArray: string[];
  /**
   * Description for exampleOneOf - this is a very long description to show in an error message
   */
  exampleOneOf?: Type1 | Type2;
  exampleUniqueObjectArray?: {
    field2?: string;
    field3?: string;
  }[];
}
/**
 * Description for type1
 */
export interface Type1 {
  /**
   * Description for field1
   */
  field1: string;
}
/**
 * Description for type2
 */
export interface Type2 {
  /**
   * Description for field2
   */
  field2: string;
  /**
   * Description for field3
   */
  field3: string;
}
",
  "./test-schema-draft-2019-09.schema.json.d.ts": "// This file was generated by a tool. Modifying it will produce unexpected behavior

export interface TestSchemaFile {
  exampleString: string;
  exampleLink?: string;
  exampleArray: string[];
  /**
   * Description for exampleOneOf - this is a very long description to show in an error message
   */
  exampleOneOf?: Type1 | Type2;
  exampleUniqueObjectArray?: {
    field2?: string;
    field3?: string;
  }[];
}
/**
 * Description for type1
 */
export interface Type1 {
  /**
   * Description for field1
   */
  field1: string;
}
/**
 * Description for type2
 */
export interface Type2 {
  /**
   * Description for field2
   */
  field2: string;
  /**
   * Description for field3
   */
  field3: string;
}
",
  "./test-schema-invalid.schema.json.d.ts": "// This file was generated by a tool. Modifying it will produce unexpected behavior

export interface HttpExampleComSchemasTestSchemaNestedChildSchemaJson {
  [k: string]: unknown;
}
",
  "./test-schema-nested-child.schema.json.d.ts": "// This file was generated by a tool. Modifying it will produce unexpected behavior

export interface HttpExampleComSchemasTestSchemaNestedChildSchemaJson {
  [k: string]: unknown;
}
",
  "./test-schema-nested.schema.json.d.ts": "// This file was generated by a tool. Modifying it will produce unexpected behavior

export interface TestSchemaFile {
  exampleString: string;
  exampleLink?: string;
  exampleArray: string[];
  /**
   * Description for exampleOneOf - this is a very long description to show in an error message
   */
  exampleOneOf?: Type1 | Type2;
  exampleUniqueObjectArray?: Type2[];
}
/**
 * Description for type1
 */
export interface Type1 {
  /**
   * Description for field1
   */
  field1: string;
}
/**
 * Description for type2
 */
export interface Type2 {
  /**
   * Description for field2
   */
  field2: string;
  /**
   * Description for field3
   */
  field3: string;
}
",
  "./test-schema.schema.json.d.ts": "// This file was generated by a tool. Modifying it will produce unexpected behavior

export interface TestSchemaFile {
  exampleString: string;
  exampleLink?: string;
  exampleArray: string[];
  /**
   * Description for exampleOneOf - this is a very long description to show in an error message
   */
  exampleOneOf?: Type1 | Type2;
  exampleUniqueObjectArray?: {
    field2?: string;
    field3?: string;
  }[];
}
/**
 * Description for type1
 */
export interface Type1 {
  /**
   * Description for field1
   */
  field1: string;
}
/**
 * Description for type2
 */
export interface Type2 {
  /**
   * Description for field2
   */
  field2: string;
  /**
   * Description for field3
   */
  field3: string;
}
",
  "./test-valid.schema.json.d.ts": "// This file was generated by a tool. Modifying it will produce unexpected behavior

export interface TestValid {
  [k: string]: unknown;
}
",
}
`;

exports[`json-schema-typings-plugin should generate typings for JSON Schemas (unformatted) 1`] = `
Object {
  "./test-invalid-additional.schema.json.d.ts": "// This file was generated by a tool. Modifying it will produce unexpected behavior

export interface TestInvalidAdditional {
[k: string]: unknown
}
",
  "./test-invalid-format.schema.json.d.ts": "// This file was generated by a tool. Modifying it will produce unexpected behavior

export interface TestInvalidFormat {
[k: string]: unknown
}
",
  "./test-schema-draft-04.schema.json.d.ts": "// This file was generated by a tool. Modifying it will produce unexpected behavior

export interface TestSchemaFile {
exampleString: string
exampleLink?: string
exampleArray: string[]
/**
 * Description for exampleOneOf - this is a very long description to show in an error message
 */
exampleOneOf?: (Type1 | Type2)
exampleUniqueObjectArray?: {
field2?: string
field3?: string
}[]
}
/**
 * Description for type1
 */
export interface Type1 {
/**
 * Description for field1
 */
field1: string
}
/**
 * Description for type2
 */
export interface Type2 {
/**
 * Description for field2
 */
field2: string
/**
 * Description for field3
 */
field3: string
}
",
  "./test-schema-draft-07.schema.json.d.ts": "// This file was generated by a tool. Modifying it will produce unexpected behavior

export interface TestSchemaFile {
exampleString: string
exampleLink?: string
exampleArray: string[]
/**
 * Description for exampleOneOf - this is a very long description to show in an error message
 */
exampleOneOf?: (Type1 | Type2)
exampleUniqueObjectArray?: {
field2?: string
field3?: string
}[]
}
/**
 * Description for type1
 */
export interface Type1 {
/**
 * Description for field1
 */
field1: string
}
/**
 * Description for type2
 */
export interface Type2 {
/**
 * Description for field2
 */
field2: string
/**
 * Description for field3
 */
field3: string
}
",
  "./test-schema-draft-2019-09.schema.json.d.ts": "// This file was generated by a tool. Modifying it will produce unexpected behavior

export interface TestSchemaFile {
exampleString: string
exampleLink?: string
exampleArray: string[]
/**
 * Description for exampleOneOf - this is a very long description to show in an error message
 */
exampleOneOf?: (Type1 | Type2)
exampleUniqueObjectArray?: {
field2?: string
field3?: string
}[]
}
/**
 * Description for type1
 */
export interface Type1 {
/**
 * Description for field1
 */
field1: string
}
/**
 * Description for type2
 */
export interface Type2 {
/**
 * Description for field2
 */
field2: string
/**
 * Description for field3
 */
field3: string
}
",
  "./test-schema-invalid.schema.json.d.ts": "// This file was generated by a tool. Modifying it will produce unexpected behavior

export interface HttpExampleComSchemasTestSchemaNestedChildSchemaJson {
[k: string]: unknown
}
",
  "./test-schema-nested-child.schema.json.d.ts": "// This file was generated by a tool. Modifying it will produce unexpected behavior

export interface HttpExampleComSchemasTestSchemaNestedChildSchemaJson {
[k: string]: unknown
}
",
  "./test-schema-nested.schema.json.d.ts": "// This file was generated by a tool. Modifying it will produce unexpected behavior

export interface TestSchemaFile {
exampleString: string
exampleLink?: string
exampleArray: string[]
/**
 * Description for exampleOneOf - this is a very long description to show in an error message
 */
exampleOneOf?: (Type1 | Type2)
exampleUniqueObjectArray?: Type2[]
}
/**
 * Description for type1
 */
export interface Type1 {
/**
 * Description for field1
 */
field1: string
}
/**
 * Description for type2
 */
export interface Type2 {
/**
 * Description for field2
 */
field2: string
/**
 * Description for field3
 */
field3: string
}
",
  "./test-schema.schema.json.d.ts": "// This file was generated by a tool. Modifying it will produce unexpected behavior

export interface TestSchemaFile {
exampleString: string
exampleLink?: string
exampleArray: string[]
/**
 * Description for exampleOneOf - this is a very long description to show in an error message
 */
exampleOneOf?: (Type1 | Type2)
exampleUniqueObjectArray?: {
field2?: string
field3?: string
}[]
}
/**
 * Description for type1
 */
export interface Type1 {
/**
 * Description for field1
 */
field1: string
}
/**
 * Description for type2
 */
export interface Type2 {
/**
 * Description for field2
 */
field2: string
/**
 * Description for field3
 */
field3: string
}
",
  "./test-valid.schema.json.d.ts": "// This file was generated by a tool. Modifying it will produce unexpected behavior

export interface TestValid {
[k: string]: unknown
}
",
}
`;
